[project]
name = "csse6400"
version = "0.1.0"
description = ""
authors = [
    {name = "zhihengJi",email = "zhiheng.ji1@student.uq.edu.au"}
]
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "csse6400"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
